--- a/multivers-runner/Cargo.toml
+++ b/multivers-runner/Cargo.toml
@@ -11,7 +11,7 @@ repository.workspace = true
 
 [dependencies]
 cfg-if = "1"
-std_detect = { git = "https://github.com/rust-lang/stdarch.git" }
+std_detect = { git = "https://github.com/rust-lang/rust.git" }
 proc-exit = "2"
 qbsdiff = "1.4.0"
 bzip2 = { version = "0.5", features = ["static"] }
